# SympleQ

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  (+1 more)
scripts/configs/: cspell.json  dev_requirements.txt  pyproject.toml  pytest.ini  pytest_cov_config.ini  requirements.txt  setup.cfg  setup.py  sonar-project.properties
src/: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/light/: CMakeLists.txt
src/light/Base/: CMakeLists.txt
src/light/Base/include/Base/: Base.h  BaseExport.h  pch.h
src/light/Base/src/: Base.cpp
src/light/Bindings/: CMakeLists.txt  light.cpp
src/light/Bindings/include/Bindings/: Bindings.h  pch.h
src/light/Bindings/src/: Bindings.cpp
src/light/Circuits/: CMakeLists.txt
src/light/Circuits/include/Circuits/: Circuits.h  CircuitsExport.h  pch.h
src/light/Circuits/src/: Circuits.cpp
src/light/Measurements/: CMakeLists.txt
src/light/Measurements/include/Measurements/: IMeasurer.h  Measurements.h
src/light/Measurements/include/Measurements/Aquire/: Aquire.h  AquireConfig.h  MCMC.h  Utils.h
src/light/Measurements/include/Measurements/Models/: BaseErrorModel.h  BaseNoiseModel.h  IErrorModel.h
src/light/Measurements/src/Aquire/: Aquire.cpp  Utils.cpp
src/light/Measurements/src/Models/: BaseNoiseModel.cpp
src/light/Operators/: CMakeLists.txt
src/light/Operators/include/Operators/: Operators.h  OperatorsExport.h  pch.h
src/light/Operators/src/: Operators.cpp
src/quaos/: __init__.py  circuit_utils.py  dynamics.py  gates.py  graph_utils.py  hamiltonian.py  pauli_utils.py  random.py  utils.py
src/quaos/circuits/: Circuits.py  Gates.py  __init__.py  utils.py
src/quaos/core/: finite_field_solvers.py
src/quaos/core/circuits/: __init__.py  circuits.py  find_symplectic.py  find_symplectic_qudits.py  gates.py  known_circuits.py  random_symplectic.py  target.py  utils.py
src/quaos/core/light/: Base.ilk  Measurement.ilk  __init__.py  test.py
src/quaos/core/light/src/: CMakeLists.txt  bindings.cpp
src/quaos/core/light/src/Base/: CMakeLists.txt
src/quaos/core/light/src/Base/include/: pch.h
src/quaos/core/light/src/Base/include/Base/: Base.h  Commons.h  pch.h
src/quaos/core/light/src/Base/include/Base/FileSystem/: Environment.h  FileSystem.h
src/quaos/core/light/src/Base/include/Base/ModuleLoader/: ModuleLoader.h
src/quaos/core/light/src/Base/src/: Base.cpp
src/quaos/core/light/src/Base/src/FileSystem/: Environment.cpp  FileSystem.cpp
src/quaos/core/light/src/Bindings/: CMakeLists.txt  bindings.cpp
src/quaos/core/light/src/Bindings/include/: Bindings.h  pch.h
src/quaos/core/light/src/Bindings/include/Bindings/: Bindings.h  pch.h
src/quaos/core/light/src/Bindings/src/: bindings.cpp
src/quaos/core/light/src/Bindings/src/Measurement/Aquire/: AquireAdaptor.cpp
src/quaos/core/light/src/Bindings/src/Measurements/Aquire/: AquireAdaptor.cpp
src/quaos/core/light/src/Circuits/: CMakeLists.txt
src/quaos/core/light/src/CudaProxy/include/CudaProxy/: CudaProxy.h  pch.h
src/quaos/core/light/src/CudaProxy/src/: CudaProxy.cpp
src/quaos/core/light/src/LightMath/: CMakeLists.txt
src/quaos/core/light/src/LightMath/include/LightMath/: LightMath.h  pch.h
src/quaos/core/light/src/LightMath/include/LightMath/Arithmetic/: Arithmetic.h
src/quaos/core/light/src/LightMath/kernels/Arithmetic/: arithmetic.cu
src/quaos/core/light/src/LightMath/src/Arithmetic/: Arithmetic.cpp
src/quaos/core/light/src/LigthMath/include/: addition.h
src/quaos/core/light/src/LigthMath/kernels/: symplectic_math.cu
src/quaos/core/light/src/LigthMath/src/: addition.cpp
src/quaos/core/light/src/Measurement/: CMakeLists.txt
src/quaos/core/light/src/Measurement/include/Measurement/: IMeasurer.h  Measurement.h  MeasurementExport.h  pch.h
src/quaos/core/light/src/Measurement/include/Measurement/Aquire/: Aquire.h  AquireConfig.h  CovarianceGraph.h  Utils.h
src/quaos/core/light/src/Measurement/src/Measurement/: Measurement.cpp
src/quaos/core/light/src/Measurements/: CMakeLists.txt
src/quaos/core/light/src/Measurements/include/Measurements/: MeasurementsExport.h  pch.h
src/quaos/core/light/src/Measurements/src/: Measurement.cpp
src/quaos/core/light/src/Measurements/src/Models/: BaseErrorModel.cpp
src/quaos/core/light/src/Operators/: CMakeLists.txt
src/quaos/core/measurement/: __init__.py  allocation.py  aquire.py  aquire_utils.py  covariance_graph.py  mcmc.py
src/quaos/core/paulis/: __init__.py  bases_manipulation.py  pauli.py  pauli_string.py  pauli_sum.py  utils.py
src/quaos/models/: Ising.py  __init__.py  chemistry.py  fermi_hubbard.py  random_hamiltonian.py  symmetric_hamiltonian.py  symmetric_hamiltonians.py  toric_code.py
src/quaos/paulis/: __init__.py  pauli.py  pauli_string.py  pauli_sum.py
src/sympleq/: __init__.py  _typing.py  dynamics.py  graph_utils.py  utils.py
src/sympleq/applications/measurement/: allocation.py  aquire.py  aquire_utils.py  covariance_graph.py  mcmc.py
src/sympleq/common/: converter.py
src/sympleq/core/: finite_field_solvers.py  statistic_utils.py
src/sympleq/core/circuits/: __init__.py  circuits.py  decomposition.py  decomposition_GFp.py  find_symplectic.py  find_symplectic_qudits.py  gate_decomposition_to_circuit.py  gates.py  known_circuits.py  phase_correction.py  random_symplectic.py  symplectic_to_circuit.py  target.py  temp_tests.py  utils.py
src/sympleq/core/graphs/: graph_automorphism.py  graph_coloring.py
src/sympleq/core/light/: __init__.py
src/sympleq/core/measurement/: allocation.py  aquire.py  aquire_utils.py  covariance_graph.py  mcmc.py
src/sympleq/core/paulis/: __init__.py  bases_manipulation.py  constants.py  formatters.py  pauli.py  pauli_object.py  pauli_string.py  pauli_string_list.py  pauli_sum.py  typing.py  utils.py
src/sympleq/core/paulis/converters/: mapper.py
src/sympleq/core/symmetries/: clifford.py  modular_helpers.py  pauli.py  phase_correction.py
src/sympleq/models/: Ising.py  __init__.py  chemistry.py  fermi_hubbard.py  random_hamiltonian.py  symmetric_hamiltonian.py  toric_code.py
(+235 files in other folders)
