[build-system]
requires = ["scikit-build-core[ninja]", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
dependencies = [
    "numpy>=2.1.3,<3.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "ipywidgets>=8.1.5,<9.0.0",
    "pandas>=2.2.3,<3.0.0",
    "qiskit>=2.0.0,<3.0.0",
    "numba>=0.61.0",
    "numba-cuda>=0.4.0,<1.0.0",
    "sympy>=1.14.0,<2.0.0",
    "matplotlib>=3.10.0,<4.0.0",
    "scipy>=1.15.1,<2.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "networkx>=3.4.2,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "galois>=0.4.6,<1.0.0",
]
name = "sympleq"
version = "0.1.0-alpha.6"
description = "QuAOS: Quantum Algorithms, Optomechanics and Simulations"
readme = "README.md"
authors = [{ name = "Quaos-Lab", email = "sympleq.org@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.scikit-build]
build-dir = "build"
cmake.source-dir = "src"
cmake.version = ">=3.21"
build.verbose = true
cmake.args = ["-DCMAKE_MESSAGE_LOG_LEVEL=STATUS", "-DCMAKE_VERBOSE_MAKEFILE=ON"]
wheel.packages = ["./src/sympleq"]
