[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "numpy>=2.1.3,<3.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "ipywidgets>=8.1.5,<9.0.0",
    "pandas>=2.2.3,<3.0.0",
    "numba>=0.61.0",
    "numba-cuda>=0.4.0,<1.0.0",
    "sympy>=1.14.0,<2.0.0",
    "matplotlib>=3.10.0,<4.0.0",
    "scipy>=1.15.1,<2.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "networkx>=3.4.2,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "galois>=0.4.6,<1.0.0",
]
name = "sympleq"
dynamic = ["version"]
description = "SympleQ"
readme = "README.md"
authors = [{ name = "Quaos-Lab", email = "sympleq.org@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
