get_filename_component(CURRENT_FOLDER_NAME "${CMAKE_CURRENT_SOURCE_DIR}" NAME)

add_library(${CURRENT_FOLDER_NAME} SHARED)

file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
)
target_sources(${CURRENT_FOLDER_NAME} PRIVATE ${PROJECT_SOURCES})

file(GLOB_RECURSE PROJECT_HEADERS CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp"
)
target_sources(${CURRENT_FOLDER_NAME} PRIVATE ${PROJECT_HEADERS})

target_include_directories(${CURRENT_FOLDER_NAME}
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
)

target_link_libraries(${CURRENT_FOLDER_NAME} PRIVATE Base)

target_compile_definitions(${CURRENT_FOLDER_NAME} PRIVATE MYLIB_BUILD)

set_target_properties(${CURRENT_FOLDER_NAME} PROPERTIES
    CXX_VISIBILITY_PRESET hidden
    VISIBILITY_INLINES_HIDDEN YES
)